# text-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_GUIDE.md  release.ps1
release/v1.0.0/: README.md
src/: app.rs  main.rs
src/app/: agent.rs  file_manager.rs  llm_backend.rs  mod.rs  models.rs  panel_characters.rs  panel_llm.rs  panel_novel.rs  panel_outline.rs  search.rs  sync.rs  ui_helpers.rs
src/app/panel/: characters.rs  llm.rs  markdown.rs  mod.rs  novel.rs  outline.rs
